<resources>
    <string name="app_name">RugStat</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="logout">Logout</string>
    <string name="create_team">Create Team</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="start_game">Start Game</string>
    <string name="join_team">Join Team</string>
    <string name="edit_team">Edit Team</string>
    <string name="please_enter_your_team_details">Please Enter Your Team Details</string>
    <string name="age_group">Age Group</string>
    <string name="team_name">Team Name</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="select_your_team">Select Your Team</string>
    <string name="forced_t_o">Forced T/O</string>
    <string name="unforced_t_o">Unforced T/O</string>
    <string name="view_stats">View Stats</string>
    <string name="user">user</string>
    <string name="welcome_back1">Welcome back</string>
    <string name="view_teams">View Teams</string>

</resources>
