<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CreateTeam">

    <include
        android:id="@+id/bar"
        layout="@layout/bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_team_details"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/t_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/t_age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/age_group"
        app:layout_constraintBottom_toTopOf="@+id/t_button"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/t_coach" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/t_coach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Coach"
        app:layout_constraintBottom_toTopOf="@+id/t_age"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/t_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/t_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"
        app:layout_constraintBottom_toTopOf="@+id/t_coach"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/t_button"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:text="Submit"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_age" />


</androidx.constraintlayout.widget.ConstraintLayout>